--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2831,3 +2831,11 @@
     version: "2.0"
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Linux; U; ARM) AppleWebKit/533.21.1 (KHTML, like Gecko) Zetakey/3.3.1
+  client:
+    type: browser
+    name: Zetakey
+    version: 3.3.1
+    engine: Webkit
+    engine_version: 533.21.1
