--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,12 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Zetakey (https://www.zetakey.com/)
+- regex: 'Zetakey/(\d+[\.\d]+)'
+  name: 'Zetakey'
+  version: '$1'
+  engine:
+    default: 'Webkit'
 
 # PlayFree Browser
 - regex: 'PlayFreeBrowser/(?:(\d+[\.\d]+))?'
