--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2839,3 +2839,19 @@
     version: 3.3.1
     engine: Webkit
     engine_version: 533.21.1
+-
+  user_agent: Mozilla/5.0 (Windows; N; Windows NT 6.1; xx) AppleWebKit/533.3 (KHTML, like Gecko) AwoX Browser CE-HTML/1.0 ()/AwoX-Software:W37-2011 Safari/533.3
+  client:
+    type: browser
+    name: AwoX
+    version: ""
+    engine: WebKit
+    engine_version: "533.3"
+-
+  user_agent: Mozilla/5.0 (N; Windows NT 6.1; WOW64) AppleWebKit/534.34 (KHTML, like Gecko) AwoX/1.0 Browser CE-HTML (HD_UIPROF MP3 MPEG_TS_SD_NA_T) - FLA Safari/534.34
+  client:
+    type: browser
+    name: AwoX
+    version: "1.0"
+    engine: WebKit
+    engine_version: "534.34"
