--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -763,7 +763,7 @@
   name: 'Mac'
   version: '10.2'
 
-- regex: 'Mac[ +]OS[ +]X(?:[ /](?:Version )?(\d+(?:[_\.]\d+)+))?'
+- regex: 'Mac[ +]OS[ +]?X(?:[ /](?:Version )?(\d+(?:[_\.]\d+)+))?'
   name: 'Mac'
   version: '$1'
 
