--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -578,6 +578,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Air 11" (2011)'
 
+    - regex: 'MacBookAir4%2C2'
+      device: 'desktop'
+      model: 'MacBook Air 13" (2011)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
