--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -9163,3 +9163,165 @@
     model: MT5887
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/68.0.3440.106 Safari/537.36 HbbTV/1.5.1 ( DRM; LGE; 75NANO996NA; WEBOS5.0 02.01.19; W50_O20; DTV_W20K;)
+  os:
+    name: webOS
+    version: "5.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 68.0.3440.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: 75NANO996NA
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/68.0.3440.106 Safari/537.36 HbbTV/1.5.1 ( DRM; LGE; OLED55CX; WEBOS5.0 03.21.08; W50_O20; DTV_W20O;)
+  os:
+    name: webOS
+    version: "5.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 68.0.3440.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: OLED55CX
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/68.0.3440.106 Safari/537.36 HbbTV/1.5.1 ( DRM; LGE; OLED65CX6LA; WEBOS5.0 02.01.19; W50_O20; DTV_W20O;)
+  os:
+    name: webOS
+    version: "5.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 68.0.3440.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: OLED65CX6LA
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/68.0.3440.106 Safari/537.36 HbbTV/1.5.1 (+DRM; LGE; OLED77GX6LA; WEBOS5.0 03.20.28; W50_O20; DTV_W20O;)
+  os:
+    name: webOS
+    version: "5.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 68.0.3440.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: OLED77GX6LA
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.79 Safari/537.36 HbbTV/1.5.1 (+DRM; LGE; 55UP7700PTA; WEBOS6.0 03.00.10; W60_K7LP; DTV_W21P;)
+  os:
+    name: webOS
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 79.0.3945.79
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: 55UP7700PTA
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.79 Safari/537.36 HbbTV/1.5.1 (+DRM; LGE; 55UP80006LA; WEBOS6.0 03.00.08; W60_LM21A; DTV_W21A;)
+  os:
+    name: webOS
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 79.0.3945.79
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: 55UP80006LA
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.79 Safari/537.36 HbbTV/1.5.1 (+DRM; LGE; 65NANO906PA; WEBOS6.0 02.03.27; W60_LM21U; DTV_W21U;)
+  os:
+    name: webOS
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 79.0.3945.79
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: 65NANO906PA
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.79 Safari/537.36 HbbTV/1.5.1 (+DRM; LGE; 60UP77506LA; WEBOS6.0 03.00.20; W60_K7LP; DTV_W21P;)
+  os:
+    name: webOS
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 79.0.3945.79
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: 60UP77506LA
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.79 Safari/537.36 HbbTV/1.5.1 (+DRM; LGE; 60UP8000PTA; WEBOS6.0 03.00.05; W60_LM21A; DTV_W21A;)
+  os:
+    name: webOS
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 79.0.3945.79
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: LG
+    model: 60UP8000PTA
+  os_family: Other Mobile
+  browser_family: Chrome
