--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -309,16 +309,26 @@ LG:
       model: 'OLED55A16LA'
     - regex: 'OLED55C19LA'
       model: 'OLED55C19LA'
+    - regex: 'OLED55CX'
+      model: 'OLED55CX'
+    - regex: 'OLED65CX6LA'
+      model: 'OLED65CX6LA'
     - regex: 'OLED77G1PVA'
       model: 'OLED77G1PVA'
+    - regex: 'OLED77GX6LA'
+      model: 'OLED77GX6LA'
     - regex: 'XU43WT180N'
       model: 'XU43WT180N'
     - regex: '50UN7340PVC'
       model: '50UN7340PVC'
     - regex: '55NANO916NA'
       model: '55NANO916NA'
+    - regex: '65NANO906PA'
+      model: '65NANO906PA'
     - regex: '65NANO90'
       model: '65NANO90'
+    - regex: '75NANO996NA'
+      model: '75NANO996NA'
     - regex: '65UN81006LB'
       model: '65UN81006LB'
     - regex: '43LJ614V-ZA'
@@ -327,6 +337,17 @@ LG:
       model: '55SK850V-ZA'
     - regex: '32LM6300PLA'
       model: '32LM6300PLA'
+    - regex: '55UP7700PTA'
+      model: '55UP7700PTA'
+    - regex: '55UP80006LA'
+      model: '55UP80006LA'
+    - regex: '60UP77506LA'
+      model: '60UP77506LA'
+    - regex: '60UP8000PTA'
+      model: '60UP8000PTA'
+
+
+      
     - regex: '32LM'
       model: '32LM'
     - regex: '(NetCast [0-9]{1}.[0-9]{1}|GLOBAL_PLAT3)'
