--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9326,3 +9326,21 @@
     model: M477
   os_family: Android
   browser_family: Android Browser
+- 
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 5.0.2; EK-5336 Build/JDQ39)
+  os:
+    name: Android
+    version: 5.0.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: EKT
+    model: EK-5336
+  os_family: Android
+  browser_family: Android Browser
