--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9362,3 +9362,183 @@
     model: Curve 9320
   os_family: BlackBerry
   browser_family: Unknown
+- 
+  user_agent: UCWEB/2.0(BlackBerry; U; 5.2.0.64; en-us; 8520/5.2.0.64) U2/1.0.0 UCBrowser/8.1.0.216 U2/1.0.0 Mobile
+  os:
+    name: BlackBerry OS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 8.1.0.216
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: RIM
+    model: Curve 8520
+  os_family: BlackBerry
+  browser_family: Unknown
+- 
+  user_agent: UCWEB/2.0(BlackBerry; U; 4.2.0.335; en-us; 8530/4.2.0.335) U2/1.0.0 UCBrowser/8.1.0.216 U2/1.0.0 Mobile
+  os:
+    name: BlackBerry OS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 8.1.0.216
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: RIM
+    model: Curve 8530
+  os_family: BlackBerry
+  browser_family: Unknown
+- 
+  user_agent: UCWEB/2.0(BlackBerry; U; 5.2.0.57; en-us; 9000/5.2.0.57) U2/1.0.0 UCBrowser/8.1.0.216 U2/1.0.0 Mobile
+  os:
+    name: BlackBerry OS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 8.1.0.216
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: RIM
+    model: Bold 9000
+  os_family: BlackBerry
+  browser_family: Unknown
+- 
+  user_agent: UCWEB/2.0(BlackBerry; U; 9.50.0.80; en-us; 9220/9.50.0.80) U2/1.0.0 UCBrowser/8.1.0.216 U2/1.0.0 Mobile
+  os:
+    name: BlackBerry OS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 8.1.0.216
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: RIM
+    model: Curve 9220
+  os_family: BlackBerry
+  browser_family: Unknown
+- 
+  user_agent: UCWEB/2.0(BlackBerry; U; 6.6.0.124; en-us; 9300/6.6.0.124) U2/1.0.0 UCBrowser/8.1.0.216
+  os:
+    name: BlackBerry OS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 8.1.0.216
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: RIM
+    model: Curve 3G 9300
+  os_family: BlackBerry
+  browser_family: Unknown
+- 
+  user_agent: UCWEB/2.0(BlackBerry; U; 8.0.0.388; en-us; 9360/8.0.0.388) U2/1.0.0 UCBrowser/8.1.0.216 U2/1.0.0 Mobile
+  os:
+    name: BlackBerry OS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 8.1.0.216
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: RIM
+    model: Curve 9360
+  os_family: BlackBerry
+  browser_family: Unknown
+- 
+  user_agent: UCWEB/2.0(BlackBerry; U; 4.2.0.424; en-us; 9630/4.2.0.424) U2/1.0.0 UCBrowser/8.1.0.216 U2/1.0.0 Mobile
+  os:
+    name: BlackBerry OS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 8.1.0.216
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: RIM
+    model: Tour 9630
+  os_family: BlackBerry
+  browser_family: Unknown
+- 
+  user_agent: UCWEB/2.0(BlackBerry; U; 9.105.0.16; en-us; 9720/9.105.0.16) U2/1.0.0 UCBrowser/8.1.0.216 U2/1.0.0 Mobile
+  os:
+    name: BlackBerry OS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 8.1.0.216
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: RIM
+    model: "9720"
+  os_family: BlackBerry
+  browser_family: Unknown
+- 
+  user_agent: UCWEB/2.0(BlackBerry; U; 6.6.0.236; en-us; 9800/6.6.0.236) U2/1.0.0 UCBrowser/8.1.0.216 U2/1.0.0 Mobile
+  os:
+    name: BlackBerry OS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 8.1.0.216
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: RIM
+    model: Torch 9800
+  os_family: BlackBerry
+  browser_family: Unknown
+- 
+  user_agent: UCWEB/2.0(BlackBerry; U; 5.1.0.532; en-us; 9860/5.1.0.532) U2/1.0.0 UCBrowser/8.1.0.216 U2/1.0.0 Mobile
+  os:
+    name: BlackBerry OS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 8.1.0.216
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: RIM
+    model: Torch 9860
+  os_family: BlackBerry
+  browser_family: Unknown
