--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -414,7 +414,7 @@ CnM:
 
 # RIM/BlackBerry
 RIM:
-  regex: 'BB10;|BlackBerry|rim[0-9]+|PlayBook|STV100-[1234]|STH100-[12]|BBA100-[12]|BBB100-[1234567]|BBD100-[126]|BB[EF]100-[123456789]|BB[CGH]100-1|9320'
+  regex: 'BB10;|BlackBerry|rim[0-9]+|PlayBook|STV100-[1234]|STH100-[12]|BBA100-[12]|BBB100-[1234567]|BBD100-[126]|BB[EF]100-[123456789]|BB[CGH]100-1|8520|8530|9000|9220|9300|9320|9360|9630|9720|9800|9860'
   device: 'smartphone'
   models:
     - regex: 'BBA100-[12]'
@@ -450,8 +450,18 @@ RIM:
       model: 'BlackBerry $1'
     - regex: 'rim([0-9]+)'
       model: 'BlackBerry $1'
-    - regex: '9320'
-      model: 'Curve 9320'
+    - regex: '9000'
+      model: 'Bold 9000'
+    - regex: '9300'
+      model: 'Curve 3G 9300'
+    - regex: '(8520|8530|9220|9320|9360)'
+      model: 'Curve $1'
+    - regex: '9630'
+      model: 'Tour 9630'
+    - regex: '9720'
+      model: '9720'
+    - regex: '(9800|9860)'
+      model: 'Torch $1'
     - regex: 'BlackBerry'
       model: 'BlackBerry'
 
