--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -623,3 +623,179 @@
     model: iPhone 8
   os_family: iOS
   browser_family: Unknown
+-
+  user_agent: TikTok/131012 CFNetwork/978.0.7 Darwin/18.7.0
+  os:
+    name: iOS
+    version: "12.4"
+    platform: ""
+  client:
+    type: mobile app
+    name: TikTok
+    version: ""
+  device:
+    type: ""
+    brand: Apple
+    model: ""
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: RoboForm/337.01 CFNetwork/711.1.16 Darwin/14.0.0
+  os:
+    name: iOS
+    version: "8.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: RoboForm
+    version: ""
+  device:
+    type: ""
+    brand: Apple
+    model: ""
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: NAVER/10.2.3.1 CFNetwork/976 Darwin/18.2.0
+  os:
+    name: iOS
+    version: "12.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: Naver
+    version: 10.2.3.1
+  device:
+    type: ""
+    brand: Apple
+    model: ""
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: Papers/2.2.19 CFNetwork/902.3.1 Darwin/17.7.0 (x86_64)
+  os:
+    name: Mac
+    version: 10.13.6
+    platform: x64
+  client:
+    type: mobile app
+    name: Papers
+    version: 2.2.19
+  device:
+    type: desktop
+    brand: Apple
+    model: ""
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Copied/336 CFNetwork/893.13.1 Darwin/17.4.0 (x86_64)
+  os:
+    name: Mac
+    version: 10.13.3
+    platform: x64
+  client:
+    type: mobile app
+    name: Copied
+    version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: ""
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: 'Pic%20Collage/7.31.14 CFNetwork/889.9 Darwin/17.2.0'
+  os:
+    name: iOS
+    version: "11.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: Pic Collage
+    version: 7.31.14
+  device:
+    type: ""
+    brand: Apple
+    model: ""
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: Pinterest for iOS/7.11 (iPhone7,2; 12.1.4)
+  os:
+    name: iOS
+    version: "12.1.4"
+    platform: ""
+  client:
+    type: mobile app
+    name: Pinterest
+    version: "7.11"
+  device:
+    type: smartphone
+    brand: Apple
+    model: iPhone 6
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: Slack/396839 CFNetwork/889.9 Darwin/17.2.0
+  os:
+    name: iOS
+    version: "11.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: Slack
+    version: ""
+  device:
+    type: ""
+    brand: Apple
+    model: ""
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: Pinterest for Android/9.0.4 (K83CA; 9)
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: mobile app
+    name: Pinterest
+    version: 9.0.4
+  device:
+    type: tablet
+    brand: ZTE
+    model: Grand X View 3
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_3 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 KAKAOTALK 8.6.3
+  os:
+    name: iOS
+    version: "13.3"
+    platform: ""
+  client:
+    type: mobile app
+    name: KakaoTalk
+    version: 8.6.3
+  device:
+    type: smartphone
+    brand: Apple
+    model: iPhone
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: TikTok 17.8.1 rv:178102 (iPhone; iOS 14.1; ja_JP) Cronet
+  os:
+    name: iOS
+    version: "14.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: TikTok
+    version: 17.8.1
+  device:
+    type: smartphone
+    brand: Apple
+    model: iPhone
+  os_family: iOS
+  browser_family: Unknown
