--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -76,7 +76,7 @@
   version: '$1'
 
 # Pinterest
-- regex: 'Pinterest(?:/([\d\.]+))?'
+- regex: 'Pinterest(?: for (?:Android|iOS))?(?:/([\d\.]+))?'
   name: 'Pinterest'
   version: '$1'
 
@@ -270,4 +270,43 @@
 -
   regex: 'Procast/?([\d\.]+)?'
   name: 'Procast'
+  version: '$1'
+-
+  regex: 'TikTok[/ ](\d+\.(?:[\.\d]+))?'
+  name: 'TikTok'
+  version: '$1'
+
+# https://apps.apple.com/app/id393499958
+- regex: 'NAVER/(\d+[\.\d]+) CFNetwork'
+  name: 'Naver'
+  version: '$1'
+
+# https://apps.apple.com/app/id1026349850
+- regex: 'Copied/(\d+[\.\d]+) CFNetwork'
+  name: 'Copied'
+  version: ''
+
+# https://apps.apple.com/app/id448639966
+- regex: 'Pic%20Collage/(\d+[\.\d]+) CFNetwork'
+  name: 'Pic Collage'
+  version: '$1'
+
+# https://apps.apple.com/app/id506003812
+- regex: 'Papers/(\d+[\.\d]+) CFNetwork'
+  name: 'Papers'
+  version: '$1'
+
+# https://apps.apple.com/app/id331787573
+- regex: 'RoboForm/(\d+[\.\d]+) CFNetwork'
+  name: 'RoboForm'
+  version: ''
+
+# https://apps.apple.com/app/id618783545
+- regex: 'Slack/(\d+[\.\d]+) CFNetwork'
+  name: 'Slack'
+  version: ''
+
+# https://apps.apple.com/us/app/id362057947
+- regex: 'KAKAOTALK (\d+\.(?:[\.\d]+))?'
+  name: 'KakaoTalk'
   version: '$1'
