--- a/regexes/device/portable_media_player.yml
+++ b/regexes/device/portable_media_player.yml
@@ -62,3 +62,15 @@ Wizz:
   regex: '(DV-PTB1080)(?:[);/ ]|$)'
   device: 'portable media player'
   model: '$1'
+
+# Sonos (sonos.com)
+SONOS:
+  regex: 'Sonos/.+\((?:ZP.+)\)|Sonos;'
+  device: 'portable media player'
+  models:
+    - regex: '\((ZPS(?:[13569]|1[1-578]|2[03])|ZP90)\)'
+      model: 'ZonePlayer $1'
+    - regex: 'Sonos;Play5;'
+      model: 'Play:5'
+    - regex: 'Sonos;One;'
+      model: 'One'
